# dml-tools

./: .gitignore  Cargo.toml  LICENSE  README.md  test_all.sh
.github/workflows/: rust.yml
examples/: gen-dmls.rs  generate-dmls.rs  my-dmls.yaml  read-file-plus-code-dml-generation.rs  read-yaml.rs
fixtures/: test-fields.yaml  test-table-fks.sql  test-table-idx.sql  test-table.sql
scripts/: cross.sh  run_all.cmd  run_all.sh
src/: gen.rs  generators.rs  lib.rs  macros.rs  spec.rs  sql.rs  tables.rs  tools.rs  type_writers.rs  util.rs  writers.rs
tests/: common.rs  deserall.rs  fields.rs  processor.rs  tables.rs  writer_types.rs  writers.rs
tests/fixtures/: delayed.yaml  proc.sql  proc_mysql.sql  proc_pgsql.sql  proc_sqlite.sql  serialized.yaml  sqlite-init.sql  sqlite-init.yaml  table-mysql.sql  table-postgresql.sql  table-sqlite.sql  test-table.sql  test-tables.yaml
