[package]
name = "dml-tools"
version = "0.1.0"
edition = "2021"
authors = ["Diego Florio <diegoefe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A library for DML generation"
readme = "README.md"
homepage = "https://github.com/diegoefe/dml-tools"
repository = "https://github.com/diegoefe/dml-tools"
keywords = ["sql", "dml", "ddl", "generator"]
categories = ["sql-generators"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
yaml-merge-keys = { version = "0.6", features = [ "serde_yaml" ] }
log = "0.4"
log4rs = { version ="1.2", features = ["gzip"] }
serde_derive = "1"
# postgres-types = "0.2"
linked-hash-map = { version = "0.5.6", features = [ "serde", "serde_impl" ] }
