[package]
name = "dml-tools"
version = "0.1.0"
edition = "2021"
authors = ["Diego Florio <diegoefe@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A library for DML generation"
readme = "README.md"
homepage = "https://github.com/diegoefe/dml-tools"
repository = "https://github.com/diegoefe/dml-tools"
keywords = ["sql", "dml", "ddl", "generator"]
categories = ["sql-generators"]
# rust-version = "1.56"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
yaml-merge-keys = { version = "0.6", features = [ "serde_yaml" ] }
log = "0.4"
serde_derive = "1"
linked-hash-map = { version = "0.5.6", features = [ "serde", "serde_impl" ] }

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
