[package]
name = "dml-tools"
version = "0.1.1"
edition = "2021"
authors = ["Diego Florio <diegoefe@gmail.com>"]
license = "MIT"
description = "A library for DML generation and serialization from/to code or YAML files"
readme = "README.md"
homepage = "https://github.com/diegoefe/dml-tools"
repository = "https://github.com/diegoefe/dml-tools"
categories = ["database"]
keywords = ["database", "sql", "mysql", "postgres", "sqlite", "dml", "generator"]
rust-version = "1.62" # typetag requires this mininum version!

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
yaml-merge-keys = { version = "0.6", features = [ "serde_yaml" ] }
serde_derive = "1"
linked-hash-map = { version = "0.5.6", features = [ "serde", "serde_impl" ] }
typetag = "0.2"

[dev-dependencies]
log = "0.4"

[lib]
name = "dml_tools"
path = "src/lib.rs"
# doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
# cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]
